Add bars for hide or show menu for mobile and fix general book

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -11,7 +11,7 @@
   color: white !important;
 }
 
-#main {
+#set-background {
   background-image: url("/images/background.jpg");
   background-repeat: repeat-y;
   background-size: contain;
